# authcrux

api/: Cargo.toml
api/src/lib/: env.rs
api/src/lib/application/: http.rs
api/src/lib/domain/realm/: service.rs
api/src/lib/domain/realm/entities/: error.rs  model.rs
backend/: main.go
backend/application/: http.go
backend/application/handler/client_handler/: client.go  create_client.go
backend/application/handler/realm_handler/: create_realm.go  realm.go
backend/application/service/: client_service.go
backend/domain/client/: model.go  port.go
backend/infrastructure/database/: database.go
backend/infrastructure/repository/: client_repository.go
backend/infrastructure/repository/gorm_model/: client.go  realm.go
